{
  "version": 4,
  "terraform_version": "1.6.4",
  "serial": 43,
  "lineage": "6d5edc4a-2904-ebf2-4317-87ec3e31b9b4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "instance-EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e429ffe49fb73da6",
            "association_id": "eipassoc-0a0fa5200ddabfa57",
            "domain": "vpc",
            "id": "eipalloc-0e429ffe49fb73da6",
            "instance": "i-0b2a3a4cc10c96fdb",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e7f23f85289e2fef",
            "private_dns": "ip-10-0-1-66.ec2.internal",
            "private_ip": "10.0.1.66",
            "public_dns": "ec2-54-152-24-180.compute-1.amazonaws.com",
            "public_ip": "54.152.24.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Instance-EIP"
            },
            "tags_all": {
              "Name": "Instance-EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-047a51fa27710816e",
            "arn": "arn:aws:ec2:us-east-1:723135679229:instance/i-0b2a3a4cc10c96fdb",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b2a3a4cc10c96fdb",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_pair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e7f23f85289e2fef",
            "private_dns": "ip-10-0-1-66.ec2.internal",
            "private_ip": "10.0.1.66",
            "public_ip": "54.152.24.180",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b7ea7d416f40ea0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fcc76d43cd6c7b49",
            "tags": {
              "Name": "bastion",
              "env": "Develop"
            },
            "tags_all": {
              "Name": "bastion",
              "env": "Develop"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d1a3709623ebd8a"
            ]
          },
          "dependencies": [
            "aws_security_group.dev-vpc-public-sg",
            "aws_subnet.vpc-dev-public-subnet-1",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vpc-dev-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723135679229:internet-gateway/igw-03dd694660fc9bd31",
            "id": "igw-03dd694660fc9bd31",
            "owner_id": "723135679229",
            "vpc_id": "vpc-00019f2f2ee8198a6"
          },
          "dependencies": [
            "aws_subnet.vpc-dev-public-subnet-1",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc-dev-public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03dd694660fc9bd31",
            "id": "r-rtb-02cff7a78a56132e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-02cff7a78a56132e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.vpc-dev-igw",
            "aws_route_table.vpc-dev-public-route-table",
            "aws_subnet.vpc-dev-public-subnet-1",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vpc-dev-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723135679229:route-table/rtb-02cff7a78a56132e9",
            "id": "rtb-02cff7a78a56132e9",
            "owner_id": "723135679229",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03dd694660fc9bd31",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-00019f2f2ee8198a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vpc-dev-public-route-table-associate01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f396f2fc224ce5eb",
            "route_table_id": "rtb-02cff7a78a56132e9",
            "subnet_id": "subnet-0fcc76d43cd6c7b49"
          },
          "dependencies": [
            "aws_route_table.vpc-dev-public-route-table",
            "aws_subnet.vpc-dev-public-subnet-1",
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-vpc-public-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723135679229:security-group/sg-08d1a3709623ebd8a",
            "description": "Dev VPC Default Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all IP and Ports Outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d1a3709623ebd8a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-sg",
            "name_prefix": "",
            "owner_id": "723135679229",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-sg"
            },
            "tags_all": {
              "Name": "public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-00019f2f2ee8198a6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc-dev-public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723135679229:subnet/subnet-0fcc76d43cd6c7b49",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcc76d43cd6c7b49",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "723135679229",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-00019f2f2ee8198a6"
          },
          "dependencies": [
            "aws_vpc.vpc-dev"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:723135679229:vpc/vpc-00019f2f2ee8198a6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00ee3f69bf43a457f",
            "default_route_table_id": "rtb-096e42fa09e203a7e",
            "default_security_group_id": "sg-0965a48e4e8f491ec",
            "dhcp_options_id": "dopt-0576f6dc633da1fda",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00019f2f2ee8198a6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-096e42fa09e203a7e",
            "owner_id": "723135679229",
            "tags": {
              "Name": "vpc-dev"
            },
            "tags_all": {
              "Name": "vpc-dev"
            }
          }
        }
      ]
    }
  ]
}